# hector_transmission_interface

./: .gitignore  .pre-commit-config.yaml  README.md  dependencies.repos
.github/workflows/: lint_build_test.yaml
controller_orchestrator/: CMakeLists.txt  README.md  package.xml
controller_orchestrator/include/controller_orchestrator/: controller_orchestrator.hpp
controller_orchestrator/src/: controller_orchestrator.cpp  controller_orchestrator_node.cpp
hector_transmission_interface/: CMakeLists.txt  README.md  package.xml  ros2_control_plugins.xml
hector_transmission_interface/include/hector_transmission_interface/: adjustable_offset_manager.hpp  adjustable_offset_transmission.hpp  adjustable_offset_transmission_loader.hpp  dynamic_offset_transmission.hpp  dynamic_offset_transmission_loader.hpp  hector_transmission_interface.hpp
hector_transmission_interface/src/: adjustable_offset_manager.cpp  adjustable_offset_transmission_loader.cpp  dynamic_offset_transmission_loader.cpp
hector_transmission_interface/test/: simple_test_hardware.hpp  test_adjustable_offset_manager.cpp  test_adjustable_offset_transmission.cpp  test_offset_manager_integration.cpp
hector_transmission_interface_msgs/: CMakeLists.txt  README.md  package.xml
hector_transmission_interface_msgs/srv/: AdjustTransmissionOffsets.srv  FlipByPi.srv  SetTransmissionOffset.srv
