<?xml version='1.0' encoding='UTF-8'?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hector_transmission_interface</name>
  <version>0.0.0</version>
  <description>TODO</description>

  <maintainer email="aljoscha.schmidt@tu-darmstadt.de">Aljoscha Schmidt</maintainer>
  <license>TODO</license>
  <author email="aljoscha.schmidt@tu-darmstadt.de">Aljoscha Schmidt</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ros2_control_cmake</build_depend>

  <depend>ament_cmake_gen_version_h</depend>
  <depend>controller_manager_msgs</depend>
  <depend>controller_orchestrator</depend>
  <depend>hector_transmission_interface_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>transmission_interface</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
